--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="RMS | Jungle's Sonic Architect">
     <meta property="og:description" content="Official website for music, merch, sample packs, and tour dates.">
     <meta property="og:image" content="images/rms-social-share.jpg">
-    <meta property="og:url" content="https://www.rmsmusic.com">
+    <meta property="og:url" content="https://www.rmsdnb.com">
     
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="images/favicon.png">
@@ -2186,7 +2186,7 @@
                     <a href="downloads/rms-press-kit.zip" download class="press-kit-btn">Download Press Kit</a>
                 </div>
                 <div class="about-stats fade-in">
-                    <div class="stat-item"><div class="stat-number">50+</div><div class="stat-label">Releases</div></div>
+                    <div class="stat-item"><div class="stat-number">250+</div><div class="stat-label">Releases</div></div>
                     <div class="stat-item"><div class="stat-number">100+</div><div class="stat-label">Live Shows</div></div>
                     <div class="stat-item"><div class="stat-number">120k+</div><div class="stat-label">Monthly Listeners</div></div>
                 </div>
