--- a/index.html
+++ b/index.html
@@ -2224,7 +2224,7 @@
                 <div class="info-item"><div class="info-label">Bookings</div><div class="info-value"><a href="mailto:rms.dnb@gmail.com">rms.dnb@gmail.com</a></div></div>
                 <div class="info-item"><div class="info-label">Press</div><div class="info-value"><a href="mailto:rms.dnb@gmail.com">rms.dnb@gmail.com</a></div></div>
                 <div class="info-item"><div class="info-label">General</div><div class="info-value"><a href="mailto:rms.dnb@gmail.com">rms.dnb@gmail.com</a></div></div>
-                <div class="info-item"><div class="info-label">Based In</div><div class="info-value">Ontario, CA</div></div>
+                <div class="info-item"><div class="info-label">Based In</div><div class="info-value">Toronto, CA</div></div>
             </div>
         </div>
     </section>
