--- a/index.html
+++ b/index.html
@@ -1819,6 +1819,7 @@
                     <p class="release-meta">2023 • 3 Tracks</p>
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">Beatport</a>
                     </div>
                 </div>
             </div>
