--- a/index.html
+++ b/index.html
@@ -1809,6 +1809,7 @@
                     <p class="release-meta">2023 • Single</p>
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Spotify</a>
+                        <a href="#" class="platform-link">Beatport</a>
                     </div>
                 </div>
             </div>
