--- a/index.html
+++ b/index.html
@@ -1777,6 +1777,9 @@
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Spotify</a>
                         <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
@@ -1788,6 +1791,9 @@
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Spotify</a>
                         <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
@@ -1799,6 +1805,9 @@
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Spotify</a>
                         <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
@@ -1810,6 +1819,9 @@
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Spotify</a>
                         <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
@@ -1821,6 +1833,9 @@
                     <div class="release-platforms">
                         <a href="#" class="platform-link">Bandcamp</a>
                         <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">Spotify</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
@@ -1831,6 +1846,10 @@
                     <p class="release-meta">2022 • Single</p>
                     <div class="release-platforms">
                         <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">Spotify</a>
+                        <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
                     </div>
                 </div>
             </div>
