--- a/index.html
+++ b/index.html
@@ -1853,6 +1853,34 @@
                     </div>
                 </div>
             </div>
+            <div class="release-card fade-in" data-track-index="6">
+                <div class="release-artwork"><div class="play-overlay"><span>▶</span></div>JUMPING MASTER</div>
+                <div class="release-info">
+                    <h3 class="release-title">Jumping Master</h3>
+                    <p class="release-meta">2023 • 3 Tracks</p>
+                    <div class="release-platforms">
+                        <a href="#" class="platform-link">Spotify</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
+                    </div>
+                </div>
+            </div>
+            <div class="release-card fade-in" data-track-index="7">
+                <div class="release-artwork"><div class="play-overlay"><span>▶</span></div>THE WARNING</div>
+                <div class="release-info">
+                    <h3 class="release-title">The Warning</h3>
+                    <p class="release-meta">2023 • 3 Tracks</p>
+                    <div class="release-platforms">
+                        <a href="#" class="platform-link">Spotify</a>
+                        <a href="#" class="platform-link">Bandcamp</a>
+                        <a href="#" class="platform-link">SoundCloud</a>
+                        <a href="#" class="platform-link">Beatport</a>
+                        <a href="#" class="platform-link">JunoDownload</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
