--- a/index.html
+++ b/index.html
@@ -1918,7 +1918,7 @@
                     <p class="video-meta">Live Performance • 2023</p>
                 </div>
             </div>
-            <div class="video-card fade-in">
+            <!-- <div class="video-card fade-in">
                 <div class="video-embed">
                     <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Video" allowfullscreen></iframe>
                 </div>
@@ -1926,7 +1926,7 @@
                     <h3 class="video-title">Making of Breakpoint</h3>
                     <p class="video-meta">Documentary • 2023</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
