--- a/index.html
+++ b/index.html
@@ -2283,12 +2283,13 @@
         <div class="footer-content">
             <a href="#home" class="footer-logo" id="footerLogo">RMS</a>
             <div class="footer-social">
-                <a href="#">SC</a>
-                <a href="#">IG</a>
-                <a href="#">YT</a>
-                <a href="#">BC</a>
-                <a href="#">SP</a>
-            </div>
+            <a href="https://soundcloud.com/rms-dnb" target="_blank" rel="noopener">SC</a>
+            <a href="https://www.instagram.com/rmsdnb/" target="_blank" rel="noopener">IG</a>
+            <a href="https://www.youtube.com/@rmsdnb" target="_blank" rel="noopener">YT</a>
+            <a href="https://bandcamp.com/rmsdnb" target="_blank" rel="noopener">BC</a>
+            <a href="https://open.spotify.com/artist/4pJ8HL3kT31Gc3fqXQBG9c" target="_blank" rel="noopener">SP</a>
+        </div>
+
             <div class="footer-links">
                 <a href="#">Privacy</a>
                 <a href="#">Terms</a>
