--- a/index.html
+++ b/index.html
@@ -1902,11 +1902,11 @@
             </div>
             <div class="video-card fade-in">
                 <div class="video-embed">
-                    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Video" allowfullscreen></iframe>
+                    <iframe src="https://www.youtube.com/embed/SJogGX09EWM" title="Video" allowfullscreen></iframe>
                 </div>
                 <div class="video-info">
                     <h3 class="video-title">Studio Session 001</h3>
-                    <p class="video-meta">Behind The Scenes • 2026</p>
+                    <p class="video-meta">Green Screen Fun • 2026</p>
                 </div>
             </div>
             <div class="video-card fade-in">
