--- a/index.html
+++ b/index.html
@@ -1905,7 +1905,7 @@
                     <iframe src="https://www.youtube.com/embed/SJogGX09EWM" title="Video" allowfullscreen></iframe>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Studio Session 001</h3>
+                    <h3 class="video-title">Green Screen 001</h3>
                     <p class="video-meta">Green Screen Fun • 2026</p>
                 </div>
             </div>
