--- a/index.html
+++ b/index.html
@@ -1773,6 +1773,26 @@
         <!-- Concrete Jungle EP -->
         <div class="release-card fade-in" data-track-index="0">
             <div class="release-artwork">
+                <img src="https://f4.bcbits.com/img/a2820632536_10.jpg" alt="Boom in 93 Artwork" class="artwork-image">
+                <!-- <div class="play-overlay"><span>▶</span></div> -->
+            </div>
+            <div class="release-info">
+                <h3 class="release-title">RMS - Broad Daylight/Funk Dub</h3>
+                <p class="release-meta">2026 • 2 Track</p>
+                <div class="release-platforms">
+                    <a href="https://open.spotify.com/artist/4pJ8HL3kT31Gc3fqXQBG9c?si=dSg0pyQyQxm_W5I013nv0g" class="platform-link">Spotify</a>
+                    <a href="https://dubsoulrecordings.bandcamp.com/album/broad-daylight-funk-dub" class="platform-link">Bandcamp</a>
+                    <a href="https://soundcloud.com/rms-dnb/sets/broad-daylightfunk-dub" class="platform-link">SoundCloud</a>
+                    <a href="https://www.beatport.com/artist/rms/112591" class="platform-link">Beatport</a>
+                    <a href="https://www.junodownload.com/artists/Rms/" class="platform-link">JunoDownload</a>
+                </div>
+            </div>
+        </div>
+
+        <!-- Urban Warfare -->
+        <!-- Concrete Jungle EP -->
+        <div class="release-card fade-in" data-track-index="1">
+            <div class="release-artwork">
                 <img src="https://i.audiomack.com/audio-addict-records/729c39efe2.webp?width=1440" alt="Boom in 93 Artwork" class="artwork-image">
                 <!-- <div class="play-overlay"><span>▶</span></div> -->
             </div>
@@ -1785,25 +1805,6 @@
                     <a href="https://soundcloud.com/djhybrid/boom-in-93-rms-remix" class="platform-link">SoundCloud</a>
                     <a href="https://www.beatport.com/track/boom-in-93/22732101?srsltid=AfmBOoogxQn7BkrYIVIRAOkD9OQdsKAjVYX8s3oHmoXcRvu67YR1Uixy" class="platform-link">Beatport</a>
                     <a href="https://www.junodownload.com/products/dj-hybrid-15-years-of-audio-addict-records/7361339-02/?track_number=3" class="platform-link">JunoDownload</a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Urban Warfare -->
-        <div class="release-card fade-in" data-track-index="1">
-            <div class="release-artwork">
-                <img src="https://imagescdn.junodownload.com/full/CS7019323-02A-BIG.jpg" alt="In the Streets Artwork" class="artwork-image">
-                <!-- <div class="play-overlay"><span>▶</span></div> -->
-            </div>
-            <div class="release-info">
-                <h3 class="release-title">In The Streets (RMS Remix)</h3>
-                <p class="release-meta">2025 • Single</p>
-                <div class="release-platforms">
-                    <a href="https://open.spotify.com/album/5ApU83r6UR5E75aWpZSUem" class="platform-link">Spotify</a>
-                    <a href="https://playmerecords.bandcamp.com/album/in-the-streets-rms-remix" class="platform-link">Bandcamp</a>
-                    <a href="https://soundcloud.com/playmerecords/abstrakt-sonance-leo-zen-reflektor-in-the-streets-feat-grim-sickers-rms-remix" class="platform-link">SoundCloud</a>
-                    <a href="https://www.beatport.com/release/in-the-streets-rms-remix/4977335?srsltid=AfmBOoqaZ1s7s5rRBdn6-Mgvak7R4AxtG2kNUEtW0S2m93iofV9zHOqb" class="platform-link">Beatport</a>
-                    <a href="https://www.junodownload.com/products/abstrakt-sonance-leo-in-the-streets-rms-remix/7019323-02/" class="platform-link">JunoDownload</a>
                 </div>
             </div>
         </div>
@@ -1922,6 +1923,25 @@
             </div>
         </div>
 
+        <!-- Urban Warfare -->
+        <div class="release-card fade-in" data-track-index="8">
+            <div class="release-artwork">
+                <img src="https://imagescdn.junodownload.com/full/CS7019323-02A-BIG.jpg" alt="In the Streets Artwork" class="artwork-image">
+                <!-- <div class="play-overlay"><span>▶</span></div> -->
+            </div>
+            <div class="release-info">
+                <h3 class="release-title">In The Streets (RMS Remix)</h3>
+                <p class="release-meta">2025 • Single</p>
+                <div class="release-platforms">
+                    <a href="https://open.spotify.com/album/5ApU83r6UR5E75aWpZSUem" class="platform-link">Spotify</a>
+                    <a href="https://playmerecords.bandcamp.com/album/in-the-streets-rms-remix" class="platform-link">Bandcamp</a>
+                    <a href="https://soundcloud.com/playmerecords/abstrakt-sonance-leo-zen-reflektor-in-the-streets-feat-grim-sickers-rms-remix" class="platform-link">SoundCloud</a>
+                    <a href="https://www.beatport.com/release/in-the-streets-rms-remix/4977335?srsltid=AfmBOoqaZ1s7s5rRBdn6-Mgvak7R4AxtG2kNUEtW0S2m93iofV9zHOqb" class="platform-link">Beatport</a>
+                    <a href="https://www.junodownload.com/products/abstrakt-sonance-leo-in-the-streets-rms-remix/7019323-02/" class="platform-link">JunoDownload</a>
+                </div>
+            </div>
+        </div>
+
     </div>
 </section>
 
@@ -1953,11 +1973,11 @@
             </div>
             <div class="video-card fade-in">
                 <div class="video-embed">
-                    <iframe src="https://www.youtube.com/embed/YOUR_VIDEO_ID" title="Video" allowfullscreen></iframe>
+                    <iframe src="https://youtube.com/embed/SyqdGLgQ8XM" title="Video" allowfullscreen></iframe>
                 </div>
                 <div class="video-info">
-                    <h3 class="video-title">Fabric London Live Set</h3>
-                    <p class="video-meta">Live Performance • 2023</p>
+                    <h3 class="video-title">RMS Live @ NightVision</h3>
+                    <p class="video-meta">Live Performance • 2025</p>
                 </div>
             </div>
             <!-- <div class="video-card fade-in">
@@ -1980,15 +2000,15 @@
         </div>
         <div class="gigs-list">
             <div class="gig-card fade-in">
-                <div class="gig-date"><div class="gig-day">22</div><div class="gig-month">FEB</div></div>
+                <div class="gig-date"><div class="gig-day">28</div><div class="gig-month">JAN</div></div>
                 <div class="gig-details">
-                    <h3 class="gig-venue">Fabric</h3>
-                    <p class="gig-location">London, UK</p>
-                    <p class="gig-support">Support: Doc Scott, Storm</p>
+                    <h3 class="gig-venue">Deep Cut Sessions//Twitch</h3>
+                    <p class="gig-location">Toronto, CA</p>
+                    <p class="gig-support">Support: Kharis</p>
                 </div>
-                <a href="#" class="gig-ticket">Tickets</a>
+                <a href="https://www.twitch.tv/rmsnkharisdnb" class="gig-ticket">Link</a>
             </div>
-            <div class="gig-card fade-in">
+            <!-- <div class="gig-card fade-in">
                 <div class="gig-date"><div class="gig-day">08</div><div class="gig-month">MAR</div></div>
                 <div class="gig-details">
                     <h3 class="gig-venue">Motion</h3>
@@ -2014,7 +2034,7 @@
                     <p class="gig-support">Support: Local selectors</p>
                 </div>
                 <a href="#" class="gig-ticket">Tickets</a>
-            </div>
+            </div> -->
         </div>
     </section>
 
@@ -2084,13 +2104,13 @@
                 <a href="https://www.patreon.com/c/rmsdnb" class="dub-btn outline">Subscribe</a>
             </div>
         </div>
-        <div class="dub-releases fade-in">
+        <!-- <div class="dub-releases fade-in">
             <div class="dub-releases-header"><h3 class="dub-releases-title">Or Buy Individual Dubs</h3></div>
             <div class="dub-releases-grid">
                 <div class="dub-release-card fade-in">
                     <div class="dub-release-artwork"><span class="dub-release-exclusive">Exclusive</span>🔊</div>
                     <div class="dub-release-info">
-                        <h4 class="dub-release-title">Concrete Jungle VIP</h4>
+                        <h4 class="dub-release-title">No Love</h4>
                         <p class="dub-release-meta">Unreleased • 2026</p>
                         <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a></div>
                     </div>
@@ -2098,15 +2118,7 @@
                 <div class="dub-release-card fade-in">
                     <div class="dub-release-artwork"><span class="dub-release-exclusive">Exclusive</span>🔊</div>
                     <div class="dub-release-info">
-                        <h4 class="dub-release-title">Amen Prophecy (Stems)</h4>
-                        <p class="dub-release-meta">Stems Pack • 2026</p>
-                        <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a></div>
-                    </div>
-                </div>
-                <div class="dub-release-card fade-in">
-                    <div class="dub-release-artwork"><span class="dub-release-exclusive">Exclusive</span>🔊</div>
-                    <div class="dub-release-info">
-                        <h4 class="dub-release-title">Warehouse Dub 001</h4>
+                        <h4 class="dub-release-title">Ethiopia Dub</h4>
                         <p class="dub-release-meta">Unreleased • 2026</p>
                         <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a></div>
                     </div>
@@ -2114,14 +2126,94 @@
                 <div class="dub-release-card fade-in">
                     <div class="dub-release-artwork"><span class="dub-release-exclusive">Exclusive</span>🔊</div>
                     <div class="dub-release-info">
-                        <h4 class="dub-release-title">Rewind (DJ Edit)</h4>
-                        <p class="dub-release-meta">Special Edit • 2023</p>
-                        <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a></div>
+                        <h4 class="dub-release-title">Burning Up (Amen Edit)</h4>
+                        <p class="dub-release-meta">Unreleased • 2026</p>
+                        <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Free</a></div>
+                    </div>
+                </div>
+                <div class="dub-release-card fade-in">
+                    <div class="dub-release-artwork"><span class="dub-release-exclusive">Exclusive</span>🔊</div>
+                    <div class="dub-release-info">
+                        <h4 class="dub-release-title">Be Happy</h4>
+                        <p class="dub-release-meta">Special Edit • 2025</p>
+                        <div class="dub-release-price"><span>Available on my Patreon</span><a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Free</a></div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+    
+    <div class="dub-releases fade-in">
+    <div class="dub-releases-header">
+        <h3 class="dub-releases-title">Or Buy Individual Dubs</h3>
+    </div>
+
+    <div class="dub-releases-grid">
+
+        <div class="dub-release-card fade-in">
+            <div class="dub-release-artwork">
+                <span class="dub-release-exclusive">Exclusive</span>
+                <img src="images/no-love.png" alt="No Love artwork" class="dub-release-image">
+            </div>
+            <div class="dub-release-info">
+                <h4 class="dub-release-title">No Love</h4>
+                <p class="dub-release-meta">Unreleased • 2026</p>
+                <div class="dub-release-price">
+                    <span>Available on my Patreon</span>
+                    <a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="dub-release-card fade-in">
+            <div class="dub-release-artwork">
+                <span class="dub-release-exclusive">Exclusive</span>
+                <img src="images/cover2.png" alt="Ethiopia Dub artwork" class="dub-release-image">
+            </div>
+            <div class="dub-release-info">
+                <h4 class="dub-release-title">Ethiopia Dub</h4>
+                <p class="dub-release-meta">Unreleased • 2026</p>
+                <div class="dub-release-price">
+                    <span>Available on my Patreon</span>
+                    <a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Buy</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="dub-release-card fade-in">
+            <div class="dub-release-artwork">
+                <span class="dub-release-exclusive">Exclusive</span>
+                <img src="images/burningup.png" alt="Burning Up Amen Edit artwork" class="dub-release-image">
+            </div>
+            <div class="dub-release-info">
+                <h4 class="dub-release-title">Burning Up (Amen Edit)</h4>
+                <p class="dub-release-meta">Unreleased • 2026</p>
+                <div class="dub-release-price">
+                    <span>Available on my Patreon</span>
+                    <a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Free</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="dub-release-card fade-in">
+            <div class="dub-release-artwork">
+                <span class="dub-release-exclusive">Exclusive</span>
+                <img src="images/happy.jpg" alt="Be Happy artwork" class="dub-release-image">
+            </div>
+            <div class="dub-release-info">
+                <h4 class="dub-release-title">Be Happy</h4>
+                <p class="dub-release-meta">Special Edit • 2025</p>
+                <div class="dub-release-price">
+                    <span>Available on my Patreon</span>
+                    <a href="https://www.patreon.com/c/rmsdnb" class="dub-release-buy">Free</a>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+</section>
+
 
     <!-- SAMPLE PACKS -->
     <section class="section page-section" id="samples" style="display: none;">
@@ -2267,7 +2359,7 @@
                 <div class="gig-date"><div class="gig-day" style="font-size:1.3rem;">JULY</div><div class="gig-month">2025</div></div>
                 <div class="gig-details">
                     <h3 class="gig-venue">RMS Guest Mix On KoolFM</h3>
-                    <p class="gig-location">Guest mix for Marcus Visionary</p>
+                    <p class="gig-location">Guest Mix for Marcus Visionary</p>
                 </div>
                 <button class="gig-ticket play-btn play-mix-btn">▶ Play</button>
             </div>
@@ -2316,13 +2408,13 @@
         </div>
     </section>
 
-    <!-- CONTACT -->
+   
     <section class="section page-section" id="contact" style="display: none;">
         <div class="section-header fade-in">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="section-subtitle">Bookings, collabs, or just to say hi</p>
+            <p class="section-subtitle">Bookings, Remixs, or General Enquiries</p>
         </div>
-        <div class="contact-container">
+        <!-- <div class="contact-container">
             <form class="contact-form fade-in" id="contactForm">
                 <div class="form-group">
                     <label class="form-label">Name</label>
@@ -2330,7 +2422,7 @@
                 </div>
                 <div class="form-group">
                     <label class="form-label">Email</label>
-                    <input type="email" class="form-input" name="email" placeholder="rms.dnb@gmail.com" required>
+                    <input type="email" class="form-input" name="email" placeholder="youremail@here.com" required>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Subject</label>
@@ -2341,7 +2433,7 @@
                     <textarea class="form-textarea" name="message" placeholder="Your message..." required></textarea>
                 </div>
                 <button type="submit" class="form-submit">Send Message</button>
-            </form>
+            </form> -->
             <div class="contact-info fade-in">
                 <div class="info-item"><div class="info-label">Bookings</div><div class="info-value"><a href="mailto:rms.dnb@gmail.com">rms.dnb@gmail.com</a></div></div>
                 <div class="info-item"><div class="info-label">Press</div><div class="info-value"><a href="mailto:rms.dnb@gmail.com">rms.dnb@gmail.com</a></div></div>
@@ -2484,14 +2576,16 @@
         let isPlaying = true, volume = 70, isMuted = false, isShuffled = false, isRepeating = false, currentTrackIndex = 0;
 
         const tracks = [
-            { title: 'Dj Hybrid - Boom in 93 (RMS REMIX)', album: '15 Years of Audio Addict', file: 'music/urban-warfare.mp3' },
-            { title: 'In The Streets (RMS Remix)', album: 'Single', file: 'music/urban-warfare.mp3' },
-            { title: 'RMS & Jaybee', album: 'Blueprint 1', file: 'music/breakpoint.mp3' },
-            { title: 'RMS & Jaybee', album: 'Blueprint 2', file: 'music/amen-prophecy.mp3' },
-            { title: 'RMS', album: 'Loaded/Keep Moving', file: 'music/bass-culture.mp3' },
+            { title: 'RMS - Broad Daylight/Funk Dub', album: 'Broad Daylight/Funk Dub', file: 'music/rms - broad daylight-funk dub.mp3' },
+            { title: 'Dj Hybrid - Boom in 93 (RMS REMIX)', album: '15 Years of Audio Addict', file: 'music/DJ Hybrid, RMS - Boom In 93.mp3' },
+            
+            { title: 'RMS & Jaybee', album: 'Blueprint 1', file: 'music/rms - blueprint 1.mp3' },
+            { title: 'RMS & Jaybee', album: 'Blueprint 2', file: 'music/Rms, JayBee - Blueprint2.mp3' },
+            { title: 'RMS', album: 'Loaded/Keep Moving', file: 'music/RMS - Loaded.mp3' },
             { title: 'RMS - Back To Reality', album: 'Live The Life EP', file: 'music/RMS- BACK TO REALITY(2024 VIP).wav' },
-            { title: 'RMS - Jumping Master', album: 'Single', file: 'music/bass-culture.mp3' },
-            { title: 'RMS - Take Warning', album: 'Single', file: 'mmusic/bass-culture.mp3' },
+            { title: 'RMS - Jumping Master', album: 'Single', file: 'music/RMS - Jumping Master.mp3' },
+            { title: 'RMS - Take Warning', album: 'Single', file: 'music/RMS - Take Warning.mp3' },
+            { title: 'In The Streets (RMS Remix)', album: 'Single', file: 'music/Abstrakt Sonance & Grim Sickers feat. Leo Zen & Reflektor - In The Streets (RMS Remix).mp3' },
         ];
 
         const mixes = [
